@@ -367,6 +367,9 @@ Working version
 - #11732: Ensure that types from packed modules are always generalised
   (Stephen Dolan and Leo White, review by Jacques Garrigue)
 
+- #11771: Use a more relaxed mode for unification in Ctype.subst
+  (Leo White, review by Jacques Garrigue and Gabriel Scherer)
+
 - #11776: Extend environment with functor parameters in `strengthen_lazy`.
   (Chris Casinghino and Luke Maurer, review by Gabriel Scherer)
 
